CodePen link added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h2>Hello Word!</h2>
+    <a href="https://codepen.io/AnnaMC00/pen/mdjOmgV">CodePen Week 1 Activity</a>
 </body>
 <script src="currentTime.js"></script>
 </html>
