Changes to the Home Portal made.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Hello</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Home Page</title>
+    <meta name="description" content="Assignment portal for Anamilena Casariego in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <link href="styles/main.css" rel="stylesheet">
 </head>
 <body>
-    <h2>Hello Word!</h2>
-    <a href="https://codepen.io/AnnaMC00/pen/mdjOmgV">CodePen Week 1 Activity</a>
+    <header>
+        <img src="#" alt="My photo">
+        <h1>Anamilena Casariego Chalco</h1>
+    </header>
+    <nav>
+        <ul>
+            <li>Week 1<a href="https://codepen.io/AnnaMC00/pen/mdjOmgV">Assignament</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <h2>WDD 230: Assignment Portal</h2>
+            <div>
+                <ul>
+                    <li>Lesson 02<a href="#">Title</a></li>
+                    <li>Lesson 03<a href="#">Title</a></li>
+                    <li>Lesson 04<a href="#">Title</a></li>
+                    <li>Lesson 05<a href="#">Title</a></li>
+                    <li>Lesson 06<a href="#">Title</a></li>
+                    <li>Lesson 07<a href="#">Title</a></li>
+                    <li>Lesson 08<a href="#">Title</a></li>
+                    <li>Lesson 09<a href="#">Title</a></li>
+                    <li>Lesson 10<a href="#">Title</a></li>
+                    <li>Lesson 11<a href="#">Title</a></li>
+                </ul>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy 2021 .:|:. Anamilena Casariego C. .:|:. Tennessee</p>
+        <p>Last Updated: <span> ... </span></p>
+    </footer>
 </body>
-<script src="currentTime.js"></script>
 </html>
