--- a/index.html
+++ b/index.html
@@ -9,36 +9,36 @@
 </head>
 <body>
     <header>
-        <img src="#" alt="My photo">
-        <h1>Anamilena Casariego Chalco</h1>
+        <img src="images/mine.jpeg" alt="My photo" width=150px>
+        <h1>Anamilena Casariego C.</h1>
     </header>
-    <nav>
-        <ul>
-            <li>Week 1<a href="https://codepen.io/AnnaMC00/pen/mdjOmgV">Assignament</a></li>
-        </ul>
-    </nav>
     <main>
         <section>
             <h2>WDD 230: Assignment Portal</h2>
             <div>
                 <ul>
-                    <li>Lesson 02<a href="#">Title</a></li>
-                    <li>Lesson 03<a href="#">Title</a></li>
-                    <li>Lesson 04<a href="#">Title</a></li>
-                    <li>Lesson 05<a href="#">Title</a></li>
-                    <li>Lesson 06<a href="#">Title</a></li>
-                    <li>Lesson 07<a href="#">Title</a></li>
-                    <li>Lesson 08<a href="#">Title</a></li>
-                    <li>Lesson 09<a href="#">Title</a></li>
-                    <li>Lesson 10<a href="#">Title</a></li>
-                    <li>Lesson 11<a href="#">Title</a></li>
+                    <li>Lesson 02: <a href="#">Title</a></li>
+                    <li>Lesson 03: <a href="#">Title</a></li>
+                    <li>Lesson 04: <a href="#">Title</a></li>
+                    <li>Lesson 05: <a href="#">Title</a></li>
+                    <li>Lesson 06: <a href="#">Title</a></li>
+                    <li>Lesson 07: <a href="#">Title</a></li>
+                    <li>Lesson 08: <a href="#">Title</a></li>
+                    <li>Lesson 09: <a href="#">Title</a></li>
+                    <li>Lesson 10: <a href="#">Title</a></li>
+                    <li>Lesson 11: <a href="#">Title</a></li>
                 </ul>
             </div>
+            <p>Other assignaments:</p>
+            <ul>
+                <li>Week 1<a href="https://codepen.io/AnnaMC00/pen/mdjOmgV">Assignament</a></li>
+            </ul>
         </section>
     </main>
     <footer>
-        <p>&copy 2021 .:|:. Anamilena Casariego C. .:|:. Tennessee</p>
-        <p>Last Updated: <span> ... </span></p>
+        <p>&copy <span id="copyrigth"></span> .:|:. Anamilena Casariego C. .:|:. Tennessee</p>
+        <p><span id="last-update"></span></p>
     </footer>
 </body>
+<script src="scripts/main.js"></script>
 </html>
