Fonts and media sizes added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Home Page</title>
     <meta name="description" content="Assignment portal for Anamilena Casariego in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-    <link href="styles/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="styles/small.css" >
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -31,7 +36,7 @@
             </div>
             <p>Other assignaments:</p>
             <ul>
-                <li>Week 1<a href="https://codepen.io/AnnaMC00/pen/mdjOmgV">Assignament</a></li>
+                <li>Week 1: <a href="https://codepen.io/AnnaMC00/pen/mdjOmgV">Assignament</a></li>
             </ul>
         </section>
     </main>
