--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <img src="images/mine.jpeg" alt="My photo" width=150px>
+        <img src="images/mine.jpeg" alt="My photo" width="150">
         <h1>Anamilena Casariego C.</h1>
     </header>
     <main>
@@ -22,16 +22,16 @@
             <h2>WDD 230: Assignment Portal</h2>
             <div>
                 <ul>
-                    <li>Lesson 02: <a href="#">Title</a></li>
-                    <li>Lesson 03: <a href="#">Title</a></li>
-                    <li>Lesson 04: <a href="#">Title</a></li>
-                    <li>Lesson 05: <a href="#">Title</a></li>
-                    <li>Lesson 06: <a href="#">Title</a></li>
-                    <li>Lesson 07: <a href="#">Title</a></li>
-                    <li>Lesson 08: <a href="#">Title</a></li>
-                    <li>Lesson 09: <a href="#">Title</a></li>
-                    <li>Lesson 10: <a href="#">Title</a></li>
-                    <li>Lesson 11: <a href="#">Title</a></li>
+                    <li>Week 02: <a href="#">Title</a></li>
+                    <li>Week 03: <a href="#">Title</a></li>
+                    <li>Week 04: <a href="#">Title</a></li>
+                    <li>Week 05: <a href="#">Title</a></li>
+                    <li>Week 06: <a href="#">Title</a></li>
+                    <li>Week 07: <a href="#">Title</a></li>
+                    <li>Week 08: <a href="#">Title</a></li>
+                    <li>Week 09: <a href="#">Title</a></li>
+                    <li>Week 10: <a href="#">Title</a></li>
+                    <li>Week 11: <a href="#">Title</a></li>
                 </ul>
             </div>
             <p>Other assignaments:</p>
@@ -41,9 +41,9 @@
         </section>
     </main>
     <footer>
-        <p>&copy <span id="copyrigth"></span> .:|:. Anamilena Casariego C. .:|:. Tennessee</p>
+        <p>&copy;<span id="copyrigth"></span> .:|:. Anamilena Casariego C. .:|:. Tennessee</p>
         <p><span id="last-update"></span></p>
     </footer>
+    <script src="scripts/main.js"></script>
 </body>
-<script src="scripts/main.js"></script>
 </html>
