--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Home Page</title>
     <meta name="description" content="Assignment portal for Anamilena Casariego in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-    <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css" >
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
