Design Principle Page added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <img src="images/mine.jpeg" alt="My photo" width="150">
+        <img src="images/mine.jpeg" alt="My photo" width=150>
         <h1>Anamilena Casariego C.</h1>
     </header>
     <main>
@@ -22,7 +22,7 @@
             <h2>WDD 230: Assignment Portal</h2>
             <div>
                 <ul>
-                    <li>Week 02: <a href="#">Title</a></li>
+                    <li>Week 02: <a href="Week2/design-principles.html">Design Principles</a></li>
                     <li>Week 03: <a href="#">Title</a></li>
                     <li>Week 04: <a href="#">Title</a></li>
                     <li>Week 05: <a href="#">Title</a></li>
