Website Planning Document Created

--- a/Week2/design-principles.html
+++ b/Week2/design-principles.html
@@ -16,11 +16,11 @@
 <body>
     <header>
         <h1>Design Principles Document</h1>
-        <p>Anamilena Casariego C.</p>
+        <h2>Anamilena Casariego C.</h2>
     </header>
     <main>
         <section>
-            <h2>Repetition</h2>
+            <h3>Repetition</h3>
             <div>
                 <p>Amazon</p>
                 <a href="https://www.amazon.com/">amazon.com/</a>
@@ -33,7 +33,7 @@
             </div>
         </section>
         <section>
-            <h2>Fitt's Law</h2>
+            <h3>Fitt's Law</h3>
             <div>
                 <p>Mindset</p>
                 <a href="https://www.getmindset.com/">getmindset.com</a>
@@ -44,7 +44,7 @@
             </div>
         </section>
         <section>
-            <h2>Alignment</h2>
+            <h3>Alignment</h3>
             <div>
                 <p>H&M</p>
                 <a href="https://www2.hm.com/en_us/index.html">hm.com</a>
