--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div>
                 <ul>
                     <li>Week 02: <a href="Week2/design-principles.html">Design Principles</a></li>
-                    <li>Week 03: <a href="#">Title</a></li>
+                    <li>Week 03: <a href="Week3/">Website Planning Document</a></li>
                     <li>Week 04: <a href="#">Title</a></li>
                     <li>Week 05: <a href="#">Title</a></li>
                     <li>Week 06: <a href="#">Title</a></li>
