--- a/Week3/index.html
+++ b/Week3/index.html
@@ -25,9 +25,9 @@
         </nav>
     </header>
     <main id="home">
-        <section>
+        <div>
             <img src="images/ba-logo.png" alt="Buenos Aires Chamber of Commerce Logo">
-        </section>
+        </div>
         <section>
             <h2>Purpose:</h2>
             <p>Buenos Aires, Argentina is a beautiful, and turistic place. Is one of the first places where
