BA Chamber of Commerce Home Page

--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Home Page</title>
-    <meta name="description" content="Assignment portal for Anamilena Casariego in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <meta name="description"
+        content="Assignment portal for Anamilena Casariego in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/small.css" >
+    <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <img src="images/mine.jpeg" alt="My photo" width=150>
@@ -22,6 +25,7 @@
             <h2>WDD 230: Assignment Portal</h2>
             <div>
                 <ul>
+                    <li>Week 01: <a href="https://codepen.io/AnnaMC00/pen/mdjOmgV">Code Pen Activity</a></li>
                     <li>Week 02: <a href="Week2/design-principles.html">Design Principles</a></li>
                     <li>Week 03: <a href="Week3/">Website Planning Document</a></li>
                     <li>Week 04: <a href="#">Title</a></li>
@@ -35,9 +39,6 @@
                 </ul>
             </div>
             <p>Other assignaments:</p>
-            <ul>
-                <li>Week 1: <a href="https://codepen.io/AnnaMC00/pen/mdjOmgV">Assignament</a></li>
-            </ul>
         </section>
     </main>
     <footer>
@@ -46,4 +47,5 @@
     </footer>
     <script src="scripts/main.js"></script>
 </body>
+
 </html>
