--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li>Week 01: <a href="https://codepen.io/AnnaMC00/pen/mdjOmgV">Code Pen Activity</a></li>
                     <li>Week 02: <a href="Week2/design-principles.html">Design Principles</a></li>
                     <li>Week 03: <a href="Week3/">Website Planning Document</a></li>
-                    <li>Week 04: <a href="#">Title</a></li>
+                    <li>Week 04: <a href="chamber/">Chamber of Commerce: Home Page</a></li>
                     <li>Week 05: <a href="#">Title</a></li>
                     <li>Week 06: <a href="#">Title</a></li>
                     <li>Week 07: <a href="#">Title</a></li>
