Chamber, viewports added.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -49,17 +49,30 @@
         <section>
             <div>Spotligth 1</div>
             <div>Spotligth 2</div>
+            <div class="none">Spotligth 3</div>
         </section>
+        <section class="none">Join</section>
     </main>
     <footer>
-        <img src="images/ba-logo.png" alt="Buenos Aires Chamber of Commerce Logo">
-        <h3>Buenos Aires Chamber of Commerce</h3>
-        <p>3045 Corrientes<br>Buenos Aires, Argentina</p>
-        <p><a href="#">info@bacc.org</a><br><br><a href="tel:+">+(485) 2584-8452</a><br><br><a href="#">Location Map</a>
-        </p>
+        <div id="footer-grid">
+            <img src="images/ba-logo.png" alt="Buenos Aires Chamber of Commerce Logo">
+            <div>   
+                <h3>Buenos Aires<br>Chamber of Commerce</h3>
+                <p>3045 Corrientes<br>Buenos Aires, Argentina</p>
+            </div>
+            <div>
+                <a href="#">info@bacc.org</a>
+                <a href="tel:+">+(485) 2584-8452</a>
+                <a href="#">Location Map</a>
+            </div>
+        </div>
         <hr>
-        <p>&copy;2023 BA Chamber<br>Anamilena Casariego<br>WDD 230 Project<br>Last Modification: <span
-                id="last-update"></span></p>
+        <div>
+            <p>&copy;2023 BA Chamber</p>
+            <p><b>Anamilena Casariego</b></p>
+            <p>WDD 230 Project</p>
+            <p>Last Modification: <span id="last-update"></span></p>
+        </div>
     </footer>
     <script src="scripts/main.js"></script>
 </body>
