Access from the home page added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                 </ul>
             </div>
             <p>Other assignaments:</p>
+            <ul>
+                <li>Book of Mormon Favorite Chapter <a href="Week5/bom.html">Activity</a></li>
+            </ul>
         </section>
     </main>
     <footer>
