--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,29 +29,27 @@
             <p></p>
         </div>
         <nav>
-            <ul>
+            <ul class="navigation">
                 <li><a id="menu" href="#"></a></li>
-                <ul class="navigation">
-                    <li><a href="#">Discover</a></li>
-                    <li><a href="#">Directory</a></li>
-                    <li><a href="#">Join</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
+                <li><a href="#">Discover</a></li>
+                <li><a href="#">Directory</a></li>
+                <li><a href="#">Join</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
         <p id="date"></p>
     </header>
     <main>
-        <section>Hero with site name and call to action</section>
-        <section>Event</section>
-        <section>Weather</section>
-        <section>News Release</section>
+        <section><h3>Hero with site name and call to action</h3></section>
+        <section><h3>Event</h3></section>
+        <section><h3>Weather</h3></section>
+        <section><h3>News Release</h3></section>
         <section>
-            <div>Spotligth 1</div>
-            <div>Spotligth 2</div>
-            <div class="none">Spotligth 3</div>
+            <div><h3>Spotligth 1</h3></div>
+            <div><h3>Spotligth 2</h3></div>
+            <div class="none"><h3>Spotligth 3</h3></div>
         </section>
-        <section class="none">Join</section>
+        <section class="none"><h3>Join</h3></section>
     </main>
     <footer>
         <div id="footer-grid">
@@ -63,12 +61,12 @@
             <div>
                 <a href="#">info@bacc.org</a>
                 <a href="tel:+">+(485) 2584-8452</a>
-                <a href="#">Location Map</a>
+                <a href="https://www.google.com/maps/place/Obelisco/@-34.6036574,-58.3840171,16.79z/data=!4m5!3m4!1s0x4aa9f0a6da5edb:0x11bead4e234e558b!8m2!3d-34.6037389!4d-58.3815704" target="_blank">📍Location Map</a>
             </div>
         </div>
         <hr>
         <div>
-            <p>&copy;2023 BA Chamber</p>
+            <p>&copy;<span id="copyrigth"></span> BA Chamber</p>
             <p><b>Anamilena Casariego</b></p>
             <p>WDD 230 Project</p>
             <p>Last Modification: <span id="last-update"></span></p>
