--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,6 +7,7 @@
     <title>Home | Planning Document</title>
     <meta name="description"
         content="Home Page for the Website Planning Document for the Chamber of Commerce Site Project. It will contain the acces to the Target Audience Page and the Design Page.">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
