Image error fixed

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -58,7 +58,7 @@
             </div>
         </section>
         <section class="positionparent">
-            <img src="images/weather.jfif" alt="Weather image">
+            <img src="images/weather.png" alt="Weather image">
             <div id="weather">
                 <h3>Weather</h3>
                 <p><span id="grades">35</span>°C</p>
