LazyLoad page and improvements in Chamber HomePage

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -65,9 +65,9 @@
         </section>
         <section class="positionparent">
             <picture>
-                <source srcset="images/weather550.jpg" media="(max-width: 526px)">
-                <source srcset="images/weather250x281.jpg" media="(max-width: 830px)">
-                <img src="images/weather250.jpg" alt="Weather image">
+                <source srcset="images/weather550.webp" media="(max-width: 526px)">
+                <source srcset="images/weather250x281.webp" media="(max-width: 830px)">
+                <img src="images/weather250.webp" alt="Weather image">
             </picture>
             <div id="weather">
                 <div>
@@ -123,7 +123,7 @@
             </div>
             <div class="positionparent">
                 <picture>
-                    <source srcset="images/subte550.jpg" media="(max-width: 526px)">
+                    <source srcset="images/subte550.webp" media="(max-width: 526px)">
                     <source srcset="images/subte400.jpg" media="(max-width: 830px)">
                     <img src="images/subte250.jpg" alt="spotligth image">
                 </picture>
