--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             </div>
             <p>Other assignaments:</p>
             <ul>
-                <li>Book of Mormon Favorite Chapter <a href="Week5/bom.html">Activity</a></li>
+                <li><a href="Week5/bom.html">Book of Mormon Favorite Chapter</a></li>
+                <li><a href="week7/lazyload.html">Progressive Loading of Images</a></li>
             </ul>
         </section>
     </main>
