--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <ul>
                 <li><a href="Week5/bom.html">Book of Mormon Favorite Chapter</a></li>
                 <li><a href="week7/lazyload.html">Progressive Loading of Images</a></li>
+                <li><a href="week8/tablebuild.html">Table Build</a></li>
             </ul>
         </section>
     </main>
