Join and ThankYou page added. Improvements made.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,10 +21,10 @@
 <body>
     <header>
         <div id="top-banner">
-            <p>Come join us for the Chamber meet and greet Wednesday at 7:00 p.m.</p>
+            <p>Come <a href="/chamber/join.html">join</a> us for the Chamber meet and greet Wednesday at 7:00 p.m.</p>
         </div>
         <div id="header-grid">
-            <a href="/chamber/"><img src="images/ba-logo.webp" alt="Buenos Aires Chamber of Commerce Logo" id="nav-logo"></a>
+            <a href="/chamber/index.html"><img src="images/ba-logo.webp" alt="Buenos Aires Chamber of Commerce Logo" id="nav-logo"></a>
             <div>
                 <h1>Buenos Aires</h1>
                 <h2>Chamber of Commerce</h2>
@@ -38,7 +38,7 @@
                     <li><a id="menu" href="#"></a></li>
                     <li><a href="discover.html">Discover</a></li>
                     <li><a href="#">Directory</a></li>
-                    <li><a href="#">Join</a></li>
+                    <li><a href="join.html">Join</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -52,7 +52,7 @@
                 <source srcset="images/wdd230-org800.jpg" media="(max-width: 830px)">
                 <img src="images/wdd230-org500.jpg" alt="Obelisco Argentino">
             </picture>
-            <button class="joinus">Join Us</button>
+            <button class="joinus" type="button"><a href="join.html">Join Us</a></button>
         </section>
         <section class="positionparent">
             <picture>
@@ -144,7 +144,7 @@
                 <img src="images/avcorrientes250.jpg" alt="Corrientes Avenue at nigth">
             </picture>
             <div id="joinusbanner" class="positionchild">
-                <button class="joinus">Join us now!</button>
+                <button class="joinus" type="button"><a href="join.html">Join us now!</a></button>
                 <div>
                     <a href="http://facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook Icon"></a>
                     <a href="http://linkedin.com" target="_blank"><img src="images/linkedin.png" alt="Linkedin Icon"></a>
