--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discover | BA Chamber of Commerce</title>
+    <title>Thank You | BA Chamber of Commerce</title>
     <meta name="description"
-        content="Discover Page of the Buenos Aires Chamber of Commerce. It contains information about the city of Buenos Aires Argentina.">
+        content="Confirmation page after submiting the for to Join the Chamber">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/base.css">
@@ -36,7 +36,7 @@
             <nav>
                 <ul class="navigation">
                     <li><a id="menu" href="#"></a></li>
-                    <li><a href="discover.html"><b>Discover</b></a></li>
+                    <li><a href="discover.html">Discover</a></li>
                     <li><a href="#">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
                     <li><a href="#">Contact</a></li>
@@ -45,41 +45,12 @@
             <p id="date"></p>
         </div>
     </header>
-    <main id="discover">
-        <h2>Meet Buenos Aires, Argentina!</h2>
-        <div class="positionparent">
-            <picture>
-                <img src="imagesDiscover/placeholder.jpg" data-src="imagesDiscover/obelisco2-550.jpg" alt="Obelisco Argentino at nigth" width="550">
-            </picture>
-            <p class="positionchild description">Obelisco in Argentina. Every big celebration occurs here!</p>
-        </div>
-        <div class="positionparent">
-        <picture>
-                <img src="imagesDiscover/placeholder.jpg" data-src="imagesDiscover/mar-del-plata550.jpg" alt="Mar del Plata" width="550">
-            </picture>
-            <p class="positionchild description">Mar del Plata Beach. Beautiful in Summer but also in Winter.</p>
-        </div>
-        <div class="positionparent">
-            <picture>
-                <img src="imagesDiscover/placeholder.jpg" data-src="imagesDiscover/el-caminito550.jpg" alt="La Boca, El Caminito" width="550">
-            </picture>
-            <p class="positionchild description">El Caminito. So many things to see!</p>
-        </div>
-        <div class="positionparent">
-            <picture>
-                <img src="imagesDiscover/placeholder.jpg" data-src="imagesDiscover/puerto-madero550.jpg" alt="Puerto Madero" width="550">
-            </picture>
-            <p class="positionchild description">Puerto Madero. Cinemas, restaurants and a beautiful view!</p>
-        </div>
-        <div class="positionparent">
-            <picture>
-                <img src="imagesDiscover/placeholder.jpg" data-src="imagesDiscover/tigre550.jpg" alt="Tigre" width="550">
-            </picture>
-            <p class="positionchild description">Tigre. Have fun and enjoy the view!</p>
-        </div>
-        <p id="visitinfo"></p>
+    <main id="thankyou">
+        <h2>Welcome to the Buenos Aires Chamber of Commerce</h2>
+        <p>We are happy that you joined us!</p>
+        <p>Return to <a href="/chamber/index.html">Home Page</a></p>
     </main>
-    <footer>
+    <footer id="thankyou-footer">
         <div id="footer-grid">
             <img src="images/ba-logo.webp" alt="Buenos Aires Chamber of Commerce Logo">
             <div>   
