Direct acces added. Bugs fixed.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,7 +24,7 @@
             <p>Come <a href="/chamber/join.html">join</a> us for the Chamber meet and greet Wednesday at 7:00 p.m.</p>
         </div>
         <div id="header-grid">
-            <a href="/chamber/index.html"><img src="images/ba-logo.webp" alt="Buenos Aires Chamber of Commerce Logo" id="nav-logo"></a>
+            <a href="index.html"><img src="images/ba-logo.webp" alt="Buenos Aires Chamber of Commerce Logo" id="nav-logo"></a>
             <div>
                 <h1>Buenos Aires</h1>
                 <h2>Chamber of Commerce</h2>
