--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li>Week 05: <a href="chamber/">BA Chamber of Commerce: Home Page</a></li>
                     <li>Week 06: <a href="chamber/">BA Chamber: Improved Home Page</a></li>
                     <li>Week 07: <a href="chamber/discover.html">Discover Page</a></li>
-                    <li>Week 08: <a href="#">Title</a></li>
+                    <li>Week 08: <a href="chamber/join.html">Join Page</a></li>
                     <li>Week 09: <a href="#">Title</a></li>
                     <li>Week 10: <a href="#">Title</a></li>
                     <li>Week 11: <a href="#">Title</a></li>
