--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <li><a href="Week5/bom.html">Book of Mormon Favorite Chapter</a></li>
                 <li><a href="week7/lazyload.html">Progressive Loading of Images</a></li>
                 <li><a href="week8/tablebuild.html">Table Build</a></li>
+                <li><a href="Week9/prophets.html">Latter-day Prophets</a></li>
             </ul>
         </section>
     </main>
