--- a/chamber/join.html
+++ b/chamber/join.html
@@ -37,7 +37,7 @@
                 <ul class="navigation">
                     <li><a id="menu" href="#"></a></li>
                     <li><a href="discover.html">Discover</a></li>
-                    <li><a href="#">Directory</a></li>
+                    <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html"><b>Join</b></a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
