--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -37,7 +37,7 @@
                 <ul class="navigation">
                     <li><a id="menu" href="#"></a></li>
                     <li><a href="discover.html">Discover</a></li>
-                    <li><a href="#">Directory</a></li>
+                    <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -48,7 +48,7 @@
     <main id="thankyou">
         <h2>Welcome to the Buenos Aires Chamber of Commerce</h2>
         <p>We are happy that you joined us!</p>
-        <p>Return to <a href="/chamber/index.html">Home Page</a></p>
+        <p>Return to <a href="index.html">Home Page</a></p>
     </main>
     <footer id="thankyou-footer">
         <div id="footer-grid">
